Add purgeCss to laravel mix

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 
 //@each $breakpoint in map-keys($grid-breakpoints) {
 //  @include media-breakpoint-up($breakpoint) {
